docroot/themes/custom/transac/alshaya_victoria_secret/sass/components/products/_product-list.scss
.c-plp {
  .product-default-image {
    img {
      @include breakpoint($desktop) {
        max-width: 18.1875rem;
        max-height: none;
      }
    }
  }

  @include breakpoint($tablet) {
    padding-top: 1.5rem;
  }

  .c-page-title__description,
  .field--name-field-acq-promotion-description {
    text-transform: none;
    font-size: 0.875rem;
  }

  .region__content {
    .filter--mobile .form-type-select {
      text-transform: none;
      color: $plp_facet_filter_label;
    }
  }

  .c-products__item {
    font-size: 0.875rem;

    @include breakpoint ($desktop) {
      width: 31.6%;
      max-width: 18.1875rem;
      margin-#{$right}: 2.4%;
      margin-bottom: 2rem;
    }

    &:nth-child(3n) {
      @include breakpoint ($desktop) {
        margin-#{$right}: 0;
      }
    }

    article:hover {
      .field--name-name a {
        text-decoration: none;
      }

      &::after {
        @include breakpoint($tablet) {
          top: -1px;
          left: -1px;
          right: -1px;
          bottom: -0.75rem;
          box-shadow: 0.25rem 0.25rem 0.5rem 0 $plp_tile_product_hover_shadow;
        }
      }
    }

    .alshaya_search_gallery {
      @include breakpoint($desktop) {
        max-height: 24.5rem;
      }

      .alshaya_search_mainimage {
        @include breakpoint($only-tablet) {
          height: auto;
        }

        @include breakpoint($desktop) {
          height: 24.5rem;
          align-items: flex-start;
        }
      }
    }
  }

  .region__content {
    .bef-exposed-form {
      position: relative;
    }

    .filter--mobile {
      .c-facet__blocks__wrapper--mobile {
        .c-facet__label {
          border-#{$right}: 0;
          color: $plp_facet_filter_label;

          &::after {
            border: 1px solid $plp_facet_label_border_mobile;
            border-#{$left}: 0;
            display: flex;
            align-items: center;
            justify-content: center;
            font-size: 2rem;
          }

          &.is-active {
            &::after {
              @include breakpoint($only-tablet) {
                #{$right}: -2.125rem;
                border: none;
              }
            }
          }
        }
      }

      @include breakpoint($tablet) {
        html[lang=ar] & {
          top: -3.8125rem;
        }
      }
    }

    .c-page-title__description {
      @include breakpoint($tablet) {
        width: auto;
        max-width: none;
      }
    }

    .filter--mobile {
      @include breakpoint($tablet) {
        bottom: auto;
        top: -3.8125rem;
      }

      @include breakpoint($only-mobile) {
        z-index: 7;
      }
    }

    .view-header {
      &.search-count {
        padding-bottom: 1rem;

        @include breakpoint($tablet) {
          margin-top: 1.5625rem;
        }
      }
    }

    .block-facets-summary-blockfilter-bar-promotions,
    .block-facets-summary-blockfilter-bar-plp,
    .block-facets-summary-blockfilter-bar {
      ul li {
        height: 2.5rem;
        margin-bottom: 0.75rem;
        padding-bottom: 0;
        border: 1px solid $plp_facet_clear_border;

        &:hover {
          opacity: 0.75;
        }

        &.clear-all {
          height: 2.5rem;
          padding: 0;
          text-transform: uppercase;
          font-family: $vs-bold;
          border-width: 1px;

          a {
            padding: 0.75rem 1.45rem;
            display: block;
          }
        }

        a {
          font-size: 0.875rem;

          span {
            &.facet-item__value {
              text-transform: none;
              padding: 0.75rem 1rem;
              height: 2.5rem;
            }

            &.facet-item__status {
              height: 2.5rem;

              &::after {
                top: 0.125rem;
              }
            }
          }
        }
      }
    }
  }

  .term-description-mobile-only {
    display: none;
  }

  .block-facet-blockcategory,
  .block-facet-blockplp-category-facet {
    .facet-item {
      input[type=checkbox] ~ label::before {
        @include breakpoint($only-mobile) {
          top: 0;
        }
      }
    }
  }

  .region__content {
    .filter--mobile {
      @include breakpoint($only-mobile) {
        z-index: auto;
      }

      .c-facet__blocks__wrapper--mobile {
        @include breakpoint($only-mobile) {
          z-index: 7;
        }

        .c-facet__blocks {
          li {
            &.clear-all {
              @include breakpoint($only-mobile) {
                height: 2.5rem;
                padding: 0;
                text-transform: uppercase;
                font-family: $vs-bold;
                border-width: 1px;
              }
            }
          }
        }
      }
    }
  }

  .swatches {
    margin-top: 0.625rem;

    > a {
      display: inline-block;

      .swatch-block {
        display: block;
        width: 0.875rem;
        height: 0.875rem;
        margin: 0 0.3125rem;
      }
    }
  }
}

.price--discount {
  font-size: 0.75rem;

  @include breakpoint($only-tablet) {
    margin-top: 0.625rem;
    margin-bottom: 0.625rem;
  }
}

.alshaya_search_slider {
  .lslide img {
    min-height: 3.7rem;
  }

  .lSSlideWrapper {
    .lSAction {
      & > a.lSPrev,
      & > a.lSNext {
        &::after {
          font-size: 1.5rem;
        }
      }
    }
  }
}

@include breakpoint($only-mobile) {
  .filter--mobile {
    .c-facet__label {
      &.active-filter-count {
        .filter-count {
          align-items: start;
        }
      }
    }
  }
}

.is-filter {
  &.view-filters {
    label {
      font-size: 0.875rem;
    }

    .form-type-select {
      @include breakpoint($upto-desktop) {
        select {
          height: 2.1875rem;
          padding: 0.5rem;
          position: static;
          line-height: 1.3;
        }

        &::after {
          height: auto;
          display: flex;
          justify-content: center;
          align-items: center;
          line-height: 2.1875rem;
          font-size: 2rem;
          z-index: auto;
        }
      }
    }
  }
}

.basic-details-wrapper {
  .field--name-field-skus {
    .form-item-quantity::after {
      @include breakpoint($tablet) {
        #{$right}: 0;
      }
    }
  }
}

.view-plp-promotional-banner {
  img {
    &:empty {
      display: none;
    }
  }
}

