CORE-4241: Fixing z-index issue for filter screen.

--- a/docroot/themes/custom/transac/alshaya_victoria_secret/sass/components/products/_product-list.scss
+++ b/docroot/themes/custom/transac/alshaya_victoria_secret/sass/components/products/_product-list.scss
@@ -213,7 +213,11 @@
 
       .c-facet__blocks__wrapper--mobile {
         @include breakpoint($only-mobile) {
-          z-index: 7;
+          z-index: auto;
+
+          .c-facet__blocks {
+            z-index: 8;
+          }
         }
 
         .c-facet__blocks {
